just enough to get it compiling right

--- a/CompuCell3D/core/pyinterface/CMakeLists.txt
+++ b/CompuCell3D/core/pyinterface/CMakeLists.txt
@@ -1,9 +1,45 @@
 cmake_policy(SET CMP0078 NEW)
 PROJECT(PYINTERFACE)
 
-FIND_PACKAGE(SWIG 3.0...3.1 REQUIRED)
+# FIND_PACKAGE(CUDA)
+# FIND_PACKAGE(CUDAToolkit)
+# INCLUDE(FindCUDA)
+# MESSAGE(" CUDA TOOLKIT FOUND " ${CUDA_TOOLKIT_INCLUDE})
+# MESSAGE(STATUS "CUDA headers found at " ${CUDA_INCLUDE_DIRS})
+# MESSAGE(STATUS "CUDA library: " ${CUDA_LIBRARIES})
+# MESSAGE(" CUDA NVCC exe " ${CUDA_NVCC_EXECUTABLE})
 
+# INCLUDE_DIRECTORIES(${CUDA_TOOLKIT_INCLUDE})
+# MESSAGE("CUDA_TOOLKIT_INCLUDE: " ${CUDA_NVCC_EXECUTABLE})
+# # enable_language(CUDA)
+# CUDA_ADD_LIBRARY(FieldExtractor_CUDA SHARED 
+# 	PlayerPythonNew/FieldExtractor_CUDA.cu
+#   PlayerPythonNew/FieldExtractor_CUDA.cuh )
+#   set_target_properties(FieldExtractor_CUDA PROPERTIES CUDA_ARCHITECTURES "75")
+# TARGET_LINK_LIBRARIES(FieldExtractor_CUDA ${CUDA_LIBRARIES})
+# set_target_properties(FieldExtractor_CUDA PROPERTIES CUDA_SEPARABLE_COMPILATION  ON)
+
+# INCLUDE(${SWIG_USE_FILE})
+FIND_PACKAGE(SWIG REQUIRED)
 INCLUDE(UseSWIG)
+
+# FIND_PACKAGE(PythonLibs)
+# FIND_PACKAGE(PythonInterp)
+
+if(NOT DEFINED NUMPY_INCLUDE_DIR)
+    SET(NUMPY_INCLUDE_DIR )
+    # searching for numpy include dir
+EXEC_PROGRAM(${Python_EXECUTABLE} ${CMAKE_SOURCE_DIR}/core/pyinterface ARGS NumpyHeader.py
+    OUTPUT_VARIABLE NUMPY_INCLUDE_DIR
+)
+endif()
+
+message ("NUMPY_INCLUDE_DIR = ${NUMPY_INCLUDE_DIR}")
+INCLUDE_DIRECTORIES(${Python_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
+INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
+INCLUDE_DIRECTORIES(${NUMPY_INCLUDE_DIR})
+
 
 SET(PYINTERFACE_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/pyinterface)
 SET(CMAKE_SWIG_FLAGS "")
@@ -39,6 +75,13 @@ IF(SWIG_FOUND)
     FIND_PACKAGE(VTK REQUIRED)
 
     message("VTK_MAJOR_VERSION=" ${VTK_MAJOR_VERSION})
+    MESSAGE("VTK_DIR " ${VTK_DIR})
+    MESSAGE("VTK_LIB_DIRS " ${VTK_LIBRARY_DIRS})
+
+    IF(VTK_FOUND)
+      message("found VTK. Version:" ${VTK_VERSION}. VTK_DIR: ${VTK_DIR})
+    ENDIF(VTK_FOUND)
+
     if (${VTK_MAJOR_VERSION} EQUAL "6")
         add_definitions(-DVTK6)
     endif()
