get compiling with cell field data being in unified memory

--- a/CompuCell3D/core/CompuCell3D/Automaton/CMakeLists.txt
+++ b/CompuCell3D/core/CompuCell3D/Automaton/CMakeLists.txt
@@ -4,15 +4,21 @@ SET(SRCS
   Transition.cpp
 )
 
+FIND_PACKAGE(CUDA)
+FIND_PACKAGE(CUDAToolkit)
+INCLUDE(FindCUDA)
+
 if(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
-   ADD_STATIC_LIBRARY(Automaton ${SRCS})
+   ADD_STATIC_LIBRARY(Automaton ${SRCS}) # LINK_LIBRARIES CUDA::cudart ${CUDA_LIBRARIES})
 else(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
-   ADD_SHARED_LIBRARY(Automaton ${SRCS})
+   ADD_SHARED_LIBRARY(Automaton ${SRCS}) # LINK_LIBRARIES CUDA::cudart ${CUDA_LIBRARIES})
 endif(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
 
 TARGET_INCLUDE_DIRECTORIES(${AutomatonLib} PUBLIC
    $<BUILD_INTERFACE:${COMPUCELL3D_SOURCE_DIR}/core>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${COMPUCELL3D_INSTALL_INCLUDE_DIR}>
+   /extra/alfuerst/cc3d_2022/include/
+   ${CUDA_TOOLKIT_INCLUDE}
 )
 
 INSTALL_FILES(/${COMPUCELL3D_INSTALL_INCLUDE_DIR}/CompuCell3D/Automaton .h
