--- a/CompuCell3D/CMakeLists.txt
+++ b/CompuCell3D/CMakeLists.txt
@@ -1,5 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
-PROJECT(COMPUCELL3D)
+
+# FIND_PACKAGE(CUDA)
+# FIND_PACKAGE(CUDAToolkit)
+# INCLUDE(FindCUDA)
+# PROJECT(COMPUCELL3D)
+PROJECT(COMPUCELL3D LANGUAGES C CXX CUDA)
 
 
 if(COMMAND cmake_policy)
