--- a/CompuCell3D/core/CompuCell3D/Potts3D/CMakeLists.txt
+++ b/CompuCell3D/core/CompuCell3D/Potts3D/CMakeLists.txt
@@ -22,6 +22,10 @@ if(NOT ${CMAKE_SYSTEM_NAME} STREQUAL Windows OR MINGW)
 
 endif(NOT ${CMAKE_SYSTEM_NAME} STREQUAL Windows OR MINGW)
 
+FIND_PACKAGE(CUDA)
+FIND_PACKAGE(CUDAToolkit)
+INCLUDE(FindCUDA)
+
 SET(LIBS
   ${GOMP_LIB}
   cc3d::Boundary
@@ -29,6 +33,7 @@ SET(LIBS
   cc3d::PublicUtilities
   cc3d::Units
   cc3d::ExpressionEvaluator
+  CUDA::cudart
 )
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
@@ -54,6 +59,8 @@ endif(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
 TARGET_INCLUDE_DIRECTORIES(${Potts3DLib} PUBLIC
   $<BUILD_INTERFACE:${COMPUCELL3D_SOURCE_DIR}/core>
   $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${COMPUCELL3D_INSTALL_INCLUDE_DIR}>
+  ${CUDA_TOOLKIT_INCLUDE}
+  /extra/alfuerst/cc3d_2022/include/
 )
 
 INSTALL_FILES(/${COMPUCELL3D_INSTALL_INCLUDE_DIR}/CompuCell3D/Potts3D .h
