fix runtime linking errors

--- a/CompuCell3D/core/CompuCell3D/Automaton/CMakeLists.txt
+++ b/CompuCell3D/core/CompuCell3D/Automaton/CMakeLists.txt
@@ -9,9 +9,9 @@ FIND_PACKAGE(CUDAToolkit)
 INCLUDE(FindCUDA)
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
-   ADD_STATIC_LIBRARY(Automaton ${SRCS}) # LINK_LIBRARIES CUDA::cudart ${CUDA_LIBRARIES})
+   ADD_STATIC_LIBRARY(Automaton ${SRCS} LINK_LIBRARIES CUDA::cudart ${CUDA_LIBRARIES})
 else(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
-   ADD_SHARED_LIBRARY(Automaton ${SRCS}) # LINK_LIBRARIES CUDA::cudart ${CUDA_LIBRARIES})
+   ADD_SHARED_LIBRARY(Automaton ${SRCS} LINK_LIBRARIES CUDA::cudart ${CUDA_LIBRARIES})
 endif(${CMAKE_SYSTEM_NAME} STREQUAL Windows)
 
 TARGET_INCLUDE_DIRECTORIES(${AutomatonLib} PUBLIC
