--- a/CompuCell3D/core/CompuCell3D/Boundary/CMakeLists.txt
+++ b/CompuCell3D/core/CompuCell3D/Boundary/CMakeLists.txt
@@ -13,7 +13,7 @@ INCLUDE(FindCUDA)
 SET(LIBS cc3d::Field3D)
 
 ADD_SHARED_LIBRARY(Boundary ${SRCS} LINK_LIBRARIES ${LIBS})
-
+set_target_properties(${Field3DLib} PROPERTIES CUDA_ARCHITECTURES "60")
 TARGET_INCLUDE_DIRECTORIES(${BoundaryLib} PUBLIC
    $<BUILD_INTERFACE:${COMPUCELL3D_SOURCE_DIR}/core>
    $<INSTALL_INTERFACE:${CMAKE_INSTALL_PREFIX}/${COMPUCELL3D_INSTALL_INCLUDE_DIR}>
